--- a/css/new.css
+++ b/css/new.css
@@ -1,5 +1,5 @@
 .header {
-    background: url(../img/Scene\ 01.png)no-repeat center / cover;
+    background: url(../img/lol.png)no-repeat center / cover;
     height: 100vh;
     padding-top: 250px;
 }
